Set username and password for Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.main.banner-mode=off
 
 # Reduce logging level. Set logging level to warn
 logging.level.root=warn
+
+# Set the default username and password for Spring Security
+spring.security.user.name=admin
+spring.security.user.password=admin
