MySQL database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=smods
 
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+## H2 Database Configuration
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
 
 # Turn off the Spring Boot banner
 spring.main.banner-mode=off
@@ -17,3 +17,8 @@ logging.level.root=warn
 # Set the default username and password for Spring Security
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/smods
+spring.datasource.username=admin
+spring.datasource.password=admin
