Add email verification for signup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,11 @@ spring.security.user.password=admin
 spring.datasource.url=jdbc:mysql://localhost:3306/smods
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=smodstesting@gmail.com
+spring.mail.password=smodstesting123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
