--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/smods
 spring.datasource.username=admin
 spring.datasource.password=admin
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Show SQL statements in the console
+spring.jpa.show-sql=true
+
+# Format the SQL statements in the console
+spring.jpa.properties.hibernate.format_sql=true
+
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
