--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ spring.security.user.password=admin
 spring.datasource.url=jdbc:mysql://localhost:3306/smods
 spring.datasource.username=admin
 spring.datasource.password=admin
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 # Show SQL statements in the console
 spring.jpa.show-sql=true
