Update Jwt Configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,6 @@ spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# OAuth2
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://your-issuer-url
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://your-jwks-url/.well-known/jwks.json
