--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,5 +40,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # OAuth2
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://your-issuer-url
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://your-jwks-url/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-hfchuziuim82vymj.us.auth0.com
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-hfchuziuim82vymj.us.auth0.com/.well-known/jwks.json
