--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
     "postcss": "^8.4.38",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
