--- a/.github/workflows/backend-deployment.yml
+++ b/.github/workflows/backend-deployment.yml
@@ -1,33 +1,33 @@
-name: Backend Deployment
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
-      - name: Build with Maven
-        run: ./mvnw clean package
-
-      - name: Deploy to ECS
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOST: 10.0.0.129
-          USER: root
-        run: |
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-          ssh -o StrictHostKeyChecking=no $USER@$HOST "sudo systemctl stop springboot.service"
-          scp target/your-app.jar $USER@$HOST:/home/$USER/
-          ssh $USER@$HOST "sudo systemctl start springboot.service"
+#name: Backend Deployment
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout Code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 11
+#
+#      - name: Build with Maven
+#        run: ./mvnw clean package
+#
+#      - name: Deploy to ECS
+#        env:
+#          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#          HOST: 10.0.0.129
+#          USER: root
+#        run: |
+#          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+#          ssh -o StrictHostKeyChecking=no $USER@$HOST "sudo systemctl stop springboot.service"
+#          scp target/your-app.jar $USER@$HOST:/home/$USER/
+#          ssh $USER@$HOST "sudo systemctl start springboot.service"
