--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,5 @@
 spring.application.name=smods
 
-## H2 Database Configuration
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.h2.console.enabled=true
-#spring.jpa.hibernate.ddl-auto=update
-
 # Turn off the Spring Boot banner
 spring.main.banner-mode=off
 
@@ -18,9 +10,9 @@ logging.level.root=warn
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://10.0.1.3:3306/smods
-spring.datasource.username=root
+# MySQL Database Configuration for Amazon RDS
+spring.datasource.url=jdbc:mysql://database-1.cfoiqm8c0yd7.ap-southeast-1.rds.amazonaws.com:3306/smods
+spring.datasource.username=admin
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
